# nietzsche

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Dockerfile  Galaxy.pptx  README.md  deploy.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/skills/python-cli-publishing/: skill.md
.github/workflows/: python-publish.yml
api/: index.html
commands/: index.html
commands/add/: index.html
commands/cloud/: index.html
commands/create/: index.html
commands/generate/: index.html
commands/inspect/: index.html
commands/new/: index.html
commands/remove/: index.html
commands/replace/: index.html
cookbook/: index.html
docs/: api.md  cookbook.md  index.md  install.md  quickstart.md  troubleshooting.md  yaml-format.md
docs/commands/: add.md  cloud.md  create.md  generate.md  index.md  inspect.md  new.md  remove.md  replace.md
docs/stylesheets/: extra.css
electron/: .gitignore  CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
electron/src/: electron-env.d.ts  vite-env.d.ts
electron/src/main/: copilot.ts  file-manager.ts  index.ts  ipc-handlers.ts  menu.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx
electron/src/renderer/components/: Chat.tsx  Editor.tsx  Preview.tsx  Sidebar.tsx  index.ts
electron/src/renderer/hooks/: index.ts  useCopilot.ts  useSlides.ts
electron/src/renderer/stores/: chat-store.ts  index.ts  presentation-store.ts  ui-store.ts
electron/src/renderer/styles/: index.css
electron/src/shared/: index.ts  slide-schema.ts  types.ts
examples/: power_cli_docs.pptx  power_cli_docs.yaml  sample.yaml
install/: index.html
quickstart/: index.html
search/: search_index.json
src/power/: __init__.py  api.py  cli.py  core.py  slides.py  styles.py
src/power.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stylesheets/: extra.css
templates/: Science.pptx  Statistics.pptx
tests/: test_blank.yaml  test_coffee.yaml  test_galaxy.yaml  test_image.yaml  test_placeholder_images.yaml
troubleshooting/: index.html
website/: index.html
yaml-format/: index.html
